# lynks_backend

./: .gitignore  LICENSE  README.md  docker-compose.yaml  prompt.txt
db_mysql/: init_db.sh
db_mysql/scripts/: 01_create_db.sql  02_create_admin.sql  03_create_tables.sql  04_seed.sql
janus_webrtc/: Dockerfile  dependencies.sh  docker-compose.yaml  janus.jcfg
janus_webrtc/test_scripts/: get_info.ps1
mysql/: Dockerfile  docker-compose.yaml
mysql/scripts/: 01_create_db.sql  02_create_admin.sql  03_create_tables.sql  04_seed.sql
network/: .dockerignore  CMakeLists.txt  Dockerfile  cbuild.ps1  crun.ps1  docker-compose.yaml  try_post.ps1  try_post_with_auth.ps1
network/main/: main.cpp
network/main/include/: network_common.hpp  network_connection.hpp  network_crypto.hpp  network_janus.hpp  network_lynks.hpp  network_message_handler.hpp  network_mysql.hpp  network_queue.hpp  network_router.hpp  network_server.hpp  network_session_handler.hpp  network_session_token.hpp  network_user.hpp
network/main/janus/include/: janus_common.hpp  janus_context.hpp  janus_messages.hpp  janus_request_mapper.hpp  janus_response_buffer.hpp  janus_response_message.hpp  janus_temporary_connection.hpp
network/main/janus/src/: janus_context.cpp  janus_messages.cpp  janus_request_mapper.cpp  janus_response_buffer.cpp  janus_response_message.cpp  janus_temporary_connection.cpp
network/main/repo/: janus_repo.cpp  janus_repo.hpp  user_repo.cpp  user_repo.hpp
network/main/service/: user_service.cpp  user_service.hpp
network/main/src/: network_crypto.cpp  network_janus.cpp  network_mysql.cpp  network_session_handler.cpp  network_session_token.cpp  network_user.cpp
network/scripts/: list_participants.ps1  test_api.ps1
server/: CMakeLists.txt
server/main/: main.cpp
